--- a/style.css
+++ b/style.css
@@ -20,17 +20,17 @@ body{
 .container{
     width: 420px;
     background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, .1);
+    border: 2px solid rgba(53, 35, 35, 0.1);
     border-radius: 10px;
-    color: #fff;
+    color: #2F4F4F;
     padding: 30px 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+    box-shadow: 0 0 10px rgba(53, 35, 35, 0.1);
 }
 
 .container h1{
     font-size: 36px;
     text-align: center;
-}
+} 
 
 .input-box{
     position: relative;
@@ -43,11 +43,11 @@ body{
     width: 100%;
     height: 100%;
     background-color: transparent;
-    border: 2px solid rgba(255, 255, 255, .1);
+    border: 2px solid rgba(53, 35, 35, 0.1);
     border-radius: 40px;
     outline: none;
     font-size: 16px;
-    color: #fff;
+    color: #2F4F4F;
     padding: 20px 45px 20px 20px;
 }
 
@@ -58,25 +58,23 @@ body{
 .input-box i{
     position: absolute;
     right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 20px;
+    top: 75%;
 }
 
  .remember-forgot {
     display: flex;
     justify-content: space-between;
-    margin: -15px 0 15px;
+    margin: -5px 0 5px;
  }
 
  .remember-forgot label input{
-    accent-color: #fff;
+    accent-color: #2F4F4F;
     margin-right: 5px;
  }
 
  .remember-forgot a{
     text-decoration: none;
-    color: #fff;
+    color: #2F4F4F;
  }
 
  .remember-forgot a:hover {
@@ -86,7 +84,7 @@ body{
  .login{
     width: 100%;
     height: 50px;
-    background-color: #fff;
+    background-color: #FFF;
     border: none;
     border-radius: 40px;
     cursor: pointer;
@@ -99,7 +97,7 @@ body{
  .login:hover{
     background-color: transparent;
     border: 2px solid rgba(255, 255, 255, .1);
-    color: #fff;
+    color: #FFF;
     transition: 0.3s;
  }
 
@@ -111,7 +109,7 @@ body{
 
  .register-link a{
     text-decoration: none;
-    color: #fff;
+    color: #2F4F4F;
     font-size: 600;
  }
 
