--- a/admin_tela_1.css
+++ b/admin_tela_1.css
@@ -36,6 +36,7 @@ body {
 .menu ul {
     list-style: none;
     padding: 0;
+    text-decoration: none;
 }
 
 .menu ul li {
@@ -56,6 +57,7 @@ body {
     color: #333;
     font-weight: 600;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    text-decoration: none;
 }
 
 .menu ul li a i {
@@ -67,4 +69,5 @@ body {
     border: 2px solid rgba(255, 255, 255, 0.1);
     color: #FFF;
     transition: 0.3s;
+    text-decoration: none;
 }
