--- a/boletim.css
+++ b/boletim.css
@@ -18,7 +18,7 @@ body {
 }
 
 .container {
-    width: 420px;
+    width: 600px;
     background-color: transparent;
     border: 2px solid rgba(53, 35, 35, 0.1);
     border-radius: 10px;
@@ -33,39 +33,47 @@ body {
     margin-bottom: 20px;
 }
 
-.menu ul {
-    list-style: none;
-    padding: 0;
-}
-
-.menu ul li {
-    margin: 15px 0;
-}
-
-.menu ul li a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+table {
     width: 100%;
-    height: 50px;
+    border-collapse: collapse;
+    margin-bottom: 20px;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 10px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+    font-weight: bold;
+}
+
+.aprovado {
+    color: green;
+    font-weight: bold;
+}
+
+.reprovado {
+    color: red;
+    font-weight: bold;
+}
+
+.voltar-btn {
+    display: inline-block;
+    padding: 10px 20px;
     background-color: #FFF;
-    border: none;
-    border-radius: 40px;
-    cursor: pointer;
-    font-size: 16px;
     color: #333;
-    font-weight: 600;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     text-decoration: none;
+    border-radius: 40px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+    font-weight: bold;
+    transition: background-color 0.3s ease;
 }
 
-.menu ul li a i {
-    margin-right: 10px;
-}
-
-.menu ul li a:hover {
+.voltar-btn:hover {
     background-color: transparent;
     border: 2px solid rgba(255, 255, 255, 0.1);
     color: #FFF;
-    transition: 0.3s;
 }
